--- a/admin.html
+++ b/admin.html
@@ -2,42 +2,41 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA MESTRA V16 | FINAL</title>
+    <title>SISTEMA MESTRA V17 | FINAL BLINDADO</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
-        body { background: #000; color: #00f2ff; font-family: sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .panel { width: 100%; max-width: 450px; background: #111; border: 2px solid #00f2ff; border-radius: 15px; padding: 25px; text-align: center; }
-        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; margin: 15px 0; box-sizing: border-box; }
-        .btn-ativar { width: 100%; background: #00ffa3; color: #000; border: none; padding: 15px; font-weight: bold; border-radius: 8px; cursor: pointer; }
-        .user-card { background: #000; padding: 15px; border-radius: 10px; margin-top: 20px; border: 1px solid #222; text-align: left; }
-        .btn-copy { background: #0078d4; color: white; border: none; width: 100%; padding: 12px; border-radius: 5px; margin-top: 10px; cursor: pointer; font-weight: bold; }
-        .btn-del { background: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 4px; float: right; cursor: pointer; }
+        body { background: #000; color: #00f2ff; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
+        .panel { width: 100%; max-width: 450px; background: #0a0a0a; border: 2px solid #00f2ff; border-radius: 15px; padding: 30px; box-shadow: 0 0 30px rgba(0,242,255,0.2); text-align: center; }
+        h2 { text-transform: uppercase; letter-spacing: 2px; margin-bottom: 20px; }
+        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; margin-bottom: 20px; box-sizing: border-box; outline: none; }
+        .btn-main { width: 100%; background: #00ffa3; color: #000; border: none; padding: 18px; font-weight: 800; border-radius: 8px; cursor: pointer; text-transform: uppercase; }
+        .card { background: #111; padding: 20px; border-radius: 10px; margin-top: 20px; border: 1px solid #222; text-align: left; }
+        .btn-copy { width: 100%; background: #0078d4; color: white; border: none; padding: 12px; border-radius: 6px; cursor: pointer; font-weight: 700; margin-top: 15px; }
+        .btn-del { background: #ff4d4d; color: white; border: none; padding: 5px 10px; border-radius: 4px; float: right; cursor: pointer; font-size: 0.7rem; }
     </style>
 </head>
 <body>
 
 <div class="panel">
-    <h2>MESTRA V16 CONTROL</h2>
+    <h2>MESTRA V17 CONTROL</h2>
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA">
-    <button class="btn-ativar" onclick="ativar()">ATIVAR ACESSO</button>
-    <div id="lista" style="margin-top:30px"></div>
+    <button class="btn-main" onclick="ativar()">ATIVAR ACESSO</button>
+    <div id="lista"></div>
 </div>
 
 <script>
+    // Configuração Firebase
     const firebaseConfig = { databaseURL: "https://cassiapromptv8-default-rtdb.firebaseio.com/" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-
-    // ESTA LINHA É A ÚNICA QUE IMPORTA:
-    const URL_DO_SITE = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html";
 
     function ativar() {
         const nome = document.getElementById('nomeAdv').value.trim();
         if(!nome) return alert("Digite o nome!");
         const id = nome.replace(/\s+/g, '_');
         db.ref('clientes/' + id).set({ nome: nome }).then(() => {
-            alert("✅ ACESSO CRIADO!");
+            alert("✅ ATIVADO!");
             document.getElementById('nomeAdv').value = "";
         });
     }
@@ -47,26 +46,21 @@
         lista.innerHTML = "";
         snap.forEach((child) => {
             const id = child.key;
-            // AQUI O LINK É MONTADO EXATAMENTE COM .HTML
-            const linkFinal = URL_DO_SITE + "?id=" + id;
+            // AQUI ESTÁ O SEGREDO: O LINK COMPLETO COM .HTML FORÇADO
+            const linkFinal = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html?id=" + id;
             lista.innerHTML += `
-                <div class="user-card">
-                    <button class="btn-del" onclick="apagar('${id}')">X</button>
+                <div class="card">
+                    <button class="btn-del" onclick="apagar('${id}')">BLOQUEAR</button>
                     <strong>Dra. ${id}</strong>
-                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK (WHATSAPP)</button>
+                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK PARA WHATSAPP</button>
                 </div>`;
         });
     });
 
     function copiar(url) {
-        // Tentativa de cópia com comando garantido
-        const el = document.createElement('textarea');
-        el.value = url;
-        document.body.appendChild(el);
-        el.select();
-        document.execCommand('copy');
-        document.body.removeChild(el);
-        alert("🔗 LINK COPIADO COM SUCESSO!");
+        navigator.clipboard.writeText(url).then(() => {
+            alert("🔗 LINK COPIADO!\nCole no navegador para testar.");
+        });
     }
 
     function apagar(id) {
