--- a/admin.html
+++ b/admin.html
@@ -2,26 +2,25 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>MESTRA V21 | CONTROLE DE PROMPTS</title>
+    <title>SISTEMA MESTRA V22 | BLOQUEIO TOTAL</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
         body { background: #000; color: #ff007a; font-family: sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .panel { width: 100%; max-width: 450px; background: #0a0a0a; border: 2px solid #ff007a; border-radius: 15px; padding: 25px; text-align: center; box-shadow: 0 0 20px #ff007a44; }
-        h2 { text-transform: uppercase; margin-bottom: 20px; color: #fff; }
+        .panel { width: 100%; max-width: 450px; background: #0a0a0a; border: 2px solid #ff007a; border-radius: 15px; padding: 25px; text-align: center; }
         input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; margin: 10px 0; box-sizing: border-box; }
-        .btn-ativar { width: 100%; background: #ff007a; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 8px; cursor: pointer; text-transform: uppercase; }
+        .btn-ativar { width: 100%; background: #ff007a; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 8px; cursor: pointer; }
         .user-card { background: #111; padding: 15px; border-radius: 10px; margin-top: 15px; border: 1px solid #222; text-align: left; position: relative; }
         .btn-copy { background: #0078d4; color: white; border: none; width: 100%; padding: 12px; border-radius: 5px; margin-top: 10px; cursor: pointer; font-weight: bold; }
-        .btn-del { background: #ff4d4d; color: white; border: none; padding: 8px 12px; border-radius: 6px; cursor: pointer; position: absolute; right: 15px; top: 15px; }
+        .btn-del { background: #ff4d4d; color: white; border: none; padding: 8px 12px; border-radius: 6px; cursor: pointer; position: absolute; right: 15px; top: 15px; font-weight: bold; }
     </style>
 </head>
 <body>
 
 <div class="panel">
-    <h2>CONTROLE DE ACESSOS V21</h2>
+    <h2>CONTROLE DE ACESSOS V22</h2>
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA">
-    <button class="btn-ativar" onclick="ativar()">ATIVAR ACESSO AO PROMPT</button>
+    <button class="btn-ativar" onclick="ativar()">ATIVAR ACESSO</button>
     <div id="lista" style="margin-top:20px"></div>
 </div>
 
@@ -30,7 +29,6 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // LINK QUE APONTA PARA O SEU SISTEMA DE PROMPT (V8 ELITE TECH)
     const urlSistema = "https://cassiakelly995-lab.github.io/meu-app/index.html";
 
     function ativar() {
@@ -38,7 +36,7 @@
         if(!nome) return alert("Digite o nome!");
         const id = nome.replace(/\s+/g, '_');
         db.ref('clientes/' + id).set({ nome: nome }).then(() => {
-            alert("✅ ACESSO ATIVADO!");
+            alert("✅ ATIVADO!");
             document.getElementById('nomeAdv').value = "";
         });
     }
@@ -53,24 +51,22 @@
                 <div class="user-card">
                     <button class="btn-del" onclick="bloquear('${id}')">BLOQUEAR</button>
                     <strong style="color: #fff">Dra. ${id}</strong>
-                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK DO PROMPT</button>
+                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK</button>
                 </div>`;
         });
     });
 
     function copiar(url) {
-        const temp = document.createElement('input');
-        document.body.appendChild(temp);
-        temp.value = url;
-        temp.select();
-        document.execCommand('copy');
-        document.body.removeChild(temp);
-        alert("🔗 LINK COPIADO!");
+        navigator.clipboard.writeText(url).then(() => alert("🔗 COPIADO!"));
     }
 
+    // FUNÇÃO QUE FORÇA O BLOQUEIO NO BANCO DE DADOS
     function bloquear(id) {
-        if(confirm("Deseja BLOQUEAR o acesso de " + id + "?")) {
-            db.ref('clientes/' + id).remove().then(() => alert("🚫 BLOQUEADO!"));
+        if(confirm("Bloquear " + id + "?")) {
+            // Usando set(null) que é mais agressivo que o remove()
+            db.ref('clientes/' + id).set(null)
+            .then(() => alert("🚫 USUÁRIO BLOQUEADO E APAGADO!"))
+            .catch((e) => alert("Erro ao bloquear. Verifique as Regras do Firebase."));
         }
     }
 </script>
