--- a/admin.html
+++ b/admin.html
@@ -2,26 +2,26 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SISTEMA MESTRA V22 | BLOQUEIO TOTAL</title>
+    <title>ADM | CONTROLE DE ACESSOS</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
-        body { background: #000; color: #ff007a; font-family: sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .panel { width: 100%; max-width: 450px; background: #0a0a0a; border: 2px solid #ff007a; border-radius: 15px; padding: 25px; text-align: center; }
+        body { background: #000; color: #00f2ff; font-family: sans-serif; padding: 20px; display: flex; justify-content: center; }
+        .panel { width: 100%; max-width: 450px; background: #0a0a0a; border: 2px solid #00f2ff; border-radius: 15px; padding: 25px; text-align: center; }
         input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; margin: 10px 0; box-sizing: border-box; }
-        .btn-ativar { width: 100%; background: #ff007a; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 8px; cursor: pointer; }
+        .btn-ativar { width: 100%; background: #00ffa3; color: #000; border: none; padding: 15px; font-weight: bold; border-radius: 8px; cursor: pointer; text-transform: uppercase; }
         .user-card { background: #111; padding: 15px; border-radius: 10px; margin-top: 15px; border: 1px solid #222; text-align: left; position: relative; }
-        .btn-copy { background: #0078d4; color: white; border: none; width: 100%; padding: 12px; border-radius: 5px; margin-top: 10px; cursor: pointer; font-weight: bold; }
-        .btn-del { background: #ff4d4d; color: white; border: none; padding: 8px 12px; border-radius: 6px; cursor: pointer; position: absolute; right: 15px; top: 15px; font-weight: bold; }
+        .btn-copy { background: #0078d4; color: white; border: none; width: 100%; padding: 10px; border-radius: 5px; margin-top: 10px; cursor: pointer; }
+        .btn-del { background: #ff4d4d; color: white; border: none; padding: 8px; border-radius: 5px; cursor: pointer; float: right; font-weight: bold; }
     </style>
 </head>
 <body>
 
 <div class="panel">
-    <h2>CONTROLE DE ACESSOS V22</h2>
+    <h2>PAINEL DE CONTROLE V22</h2>
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA">
-    <button class="btn-ativar" onclick="ativar()">ATIVAR ACESSO</button>
-    <div id="lista" style="margin-top:20px"></div>
+    <button class="btn-ativar" onclick="ativar()">ATIVAR NOVA LICENÇA</button>
+    <div id="lista"></div>
 </div>
 
 <script>
@@ -29,14 +29,15 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
+    // LINK QUE VAI PARA O SEU INDEX.HTML
     const urlSistema = "https://cassiakelly995-lab.github.io/meu-app/index.html";
 
     function ativar() {
         const nome = document.getElementById('nomeAdv').value.trim();
-        if(!nome) return alert("Digite o nome!");
+        if(!nome) return;
         const id = nome.replace(/\s+/g, '_');
         db.ref('clientes/' + id).set({ nome: nome }).then(() => {
-            alert("✅ ATIVADO!");
+            alert("ATIVADO!");
             document.getElementById('nomeAdv').value = "";
         });
     }
@@ -50,23 +51,19 @@
             lista.innerHTML += `
                 <div class="user-card">
                     <button class="btn-del" onclick="bloquear('${id}')">BLOQUEAR</button>
-                    <strong style="color: #fff">Dra. ${id}</strong>
+                    <strong>Dra. ${id}</strong><br>
                     <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK</button>
                 </div>`;
         });
     });
 
     function copiar(url) {
-        navigator.clipboard.writeText(url).then(() => alert("🔗 COPIADO!"));
+        navigator.clipboard.writeText(url).then(() => alert("LINK NA MÃO!"));
     }
 
-    // FUNÇÃO QUE FORÇA O BLOQUEIO NO BANCO DE DADOS
     function bloquear(id) {
-        if(confirm("Bloquear " + id + "?")) {
-            // Usando set(null) que é mais agressivo que o remove()
-            db.ref('clientes/' + id).set(null)
-            .then(() => alert("🚫 USUÁRIO BLOQUEADO E APAGADO!"))
-            .catch((e) => alert("Erro ao bloquear. Verifique as Regras do Firebase."));
+        if(confirm("Bloquear acesso de " + id + "?")) {
+            db.ref('clientes/' + id).set(null); // ISSO APAGA NO BANCO E BLOQUEIA O SITE
         }
     }
 </script>
