--- a/index.html
+++ b/index.html
@@ -2,59 +2,117 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>CÁSSIA PROMPT V8 | ELITE EDITION</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CÁSSIA PROMPT V8 | SINGULARITY ELITE</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
-        body { background: #000; color: #ff007a; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 20px; text-align: center; }
-        #bloqueio { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; z-index: 9999; justify-content: center; align-items: center; flex-direction: column; }
-        .conteudo { border: 2px solid #ff007a; padding: 20px; border-radius: 15px; box-shadow: 0 0 20px #ff007a66; max-width: 600px; margin: auto; }
-        h1 { text-transform: uppercase; letter-spacing: 2px; }
-        textarea { width: 100%; height: 150px; background: #111; border: 1px solid #333; color: #fff; border-radius: 10px; padding: 10px; box-sizing: border-box; }
-        button { background: #ff007a; color: white; border: none; padding: 15px 30px; border-radius: 8px; font-weight: bold; cursor: pointer; margin-top: 20px; width: 100%; }
+        :root {
+            --bg: #ffffff; --text: #1a1a1a; --primary: #0067b8; --accent: #c30052;
+            --surface: #f2f2f2; --border: #e6e6e6; --input-bg: #ffffff;
+        }
+        [data-theme='dark'] {
+            --bg: #0a0a0a; --text: #f5f5f5; --primary: #4daaf8; --accent: #ff007a;
+            --surface: #161616; --border: #333333; --input-bg: #111111;
+        }
+        body { background: var(--bg); color: var(--text); font-family: 'Segoe UI', sans-serif; margin: 0; transition: 0.3s; }
+        #lock-screen { position: fixed; top:0; left:0; width:100%; height:100%; background:#000; z-index:9999; display:none; color:white; align-items:center; justify-content:center; flex-direction:column; text-align:center; }
+        header { background: var(--surface); padding: 12px 20px; border-bottom: 4px solid var(--accent); display: flex; justify-content: space-between; align-items: center; font-size: 13px; font-weight: bold; }
+        .container { max-width: 1000px; margin: 40px auto; padding: 20px; }
+        .console-header { border-left: 5px solid var(--accent); padding-left: 20px; margin-bottom: 30px; }
+        .console-header h1 { font-size: 32px; margin: 0; font-weight: 600; }
+        .console-header p { margin: 5px 0; color: #888; letter-spacing: 2px; font-size: 11px; }
+        .main-card { background: var(--bg); border: 1px solid var(--border); border-radius: 4px; padding: 40px; box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
+        .grid-inputs { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-bottom: 25px; }
+        label { display: block; font-size: 11px; font-weight: bold; text-transform: uppercase; margin-bottom: 8px; color: var(--accent); }
+        input, textarea { width: 100%; background: var(--input-bg); border: 1px solid var(--border); color: var(--text); padding: 14px; border-radius: 4px; box-sizing: border-box; outline: none; font-size: 15px; }
+        .status-bar { font-size: 10px; color: #888; border-top: 1px solid var(--border); padding-top: 10px; margin-top: 5px; text-transform: uppercase; }
+        .action-area { display: flex; justify-content: flex-end; gap: 15px; margin-top: 30px; }
+        .btn { padding: 14px 28px; border-radius: 2px; font-weight: bold; cursor: pointer; text-transform: uppercase; border: none; font-size: 12px; }
+        .btn-exe { background: var(--primary); color: white; }
+        .btn-theme { background: var(--surface); color: var(--text); border: 1px solid var(--border); }
+        .footer-info { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 50px; font-size: 13px; color: #666; line-height: 1.6; border-top: 1px solid var(--border); padding-top: 30px; }
+        .footer-info h3 { font-size: 14px; color: var(--text); text-transform: uppercase; }
     </style>
 </head>
-<body>
+<body data-theme="light">
 
-<div id="bloqueio">
-    <h1 style="font-size: 50px;">🚫</h1>
+<div id="lock-screen">
+    <h1 style="color:var(--accent); font-size: 50px;">🚫</h1>
     <h1>ACESSO REVOGADO</h1>
-    <p>Sua licença não está mais ativa no sistema.</p>
+    <p>A licença deste ID foi bloqueada ou expirou.</p>
 </div>
 
-<div id="sistema-principal" class="conteudo">
-    <h1>CÁSSIA PROMPT V8</h1>
-    <p>Bem-vinda, Doutora!</p>
-    <textarea placeholder="Insira os fatos aqui..."></textarea>
-    <button onclick="alert('Processando Inteligência Artificial...')">GERAR PETIÇÃO ELITE</button>
+<header>
+    <div>CÁSSIA PROMPT | V8 SINGULARITY ELITE</div>
+    <button class="btn btn-theme" onclick="toggleTheme()">🌓 ALTERNAR TEMA</button>
+</header>
+
+<div class="container">
+    <div class="console-header">
+        <h1>Console de Engenharia V8</h1>
+        <p>SINCRONIZAÇÃO DE DADOS E COMANDOS JURÍDICOS</p>
+    </div>
+
+    <div class="main-card">
+        <div class="grid-inputs">
+            <div>
+                <label>■ Arquitetura de Persona</label>
+                <input type="text" placeholder="Ex: Advogada Sênior, OAB/SP">
+            </div>
+            <div>
+                <label>■ Matriz de Objetivo</label>
+                <input type="text" placeholder="Ex: Recurso de Apelação">
+            </div>
+        </div>
+
+        <div>
+            <label>■ Núcleo de Fatos (Corpus)</label>
+            <textarea style="height: 180px;" placeholder="Insira os fatos aqui. Rigor total contra alucinações."></textarea>
+            <div class="status-bar">Status de Integridade: Monitorando Dados</div>
+        </div>
+
+        <div class="action-area">
+            <button class="btn btn-exe" onclick="alert('Iniciando Processamento de Elite...')">Executar Protocolo V8</button>
+        </div>
+    </div>
+
+    <div class="footer-info">
+        <div>
+            <h3>Segurança Jurídica</h3>
+            O sistema impede a IA de inventar dados. Toda a resposta é baseada estritamente nos fatos fornecidos.
+        </div>
+        <div>
+            <h3>Privacidade e LGPD</h3>
+            Dados processados sob sigilo profissional absoluto e criptografia local.
+        </div>
+    </div>
 </div>
 
 <script>
-    // CONFIGURAÇÃO DO SEU FIREBASE
     const firebaseConfig = { databaseURL: "https://cassiapromptv8-default-rtdb.firebaseio.com/" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // PEGA O ID DO LINK (...?id=Dra_Helen)
     const urlParams = new URLSearchParams(window.location.search);
     const userId = urlParams.get('id');
 
     if (!userId) {
-        document.getElementById('sistema-principal').style.display = 'none';
-        document.getElementById('bloqueio').style.display = 'flex';
-        document.querySelector('#bloqueio h1').innerText = "LINK INVÁLIDO";
+        document.body.innerHTML = "<h1 style='text-align:center;margin-top:50px;'>ID INVÁLIDO</h1>";
     } else {
-        // CHECAGEM DE SEGURANÇA EM TEMPO REAL
-        db.ref('clientes/' + userId).on('value', (snapshot) => {
-            if (!snapshot.exists()) {
-                // SE VOCÊ APAGAR NO ADMIN, ISSO AQUI ATIVA NA HORA
-                document.getElementById('sistema-principal').style.display = 'none';
-                document.getElementById('bloqueio').style.display = 'flex';
+        db.ref('clientes/' + userId).on('value', (snap) => {
+            if (!snap.exists()) {
+                document.getElementById('lock-screen').style.display = 'flex';
             } else {
-                document.getElementById('sistema-principal').style.display = 'block';
-                document.getElementById('bloqueio').style.display = 'none';
+                document.getElementById('lock-screen').style.display = 'none';
             }
         });
+    }
+
+    function toggleTheme() {
+        const body = document.body;
+        const current = body.getAttribute('data-theme');
+        body.setAttribute('data-theme', current === 'light' ? 'dark' : 'light');
     }
 </script>
 </body>
