--- a/adminv25.html
+++ b/adminv25.html
@@ -2,24 +2,31 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>ADM | CONTROLE V8 SINGULARITY</title>
+    <title>MESTRA V25 | CONTROLE SUPREMO</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
-        body { background: #000; color: #00f2ff; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .panel { width: 100%; max-width: 450px; background: #0a0a0a; border: 2px solid #00f2ff; border-radius: 15px; padding: 25px; text-align: center; box-shadow: 0 0 20px rgba(0,242,255,0.2); }
-        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 8px; margin: 10px 0; box-sizing: border-box; }
-        .btn-ativar { width: 100%; background: #00ffa3; color: #000; border: none; padding: 15px; font-weight: bold; border-radius: 8px; cursor: pointer; text-transform: uppercase; }
-        .user-card { background: #111; padding: 15px; border-radius: 10px; margin-top: 15px; border: 1px solid #222; text-align: left; position: relative; }
-        .btn-copy { background: #0078d4; color: white; border: none; width: 100%; padding: 12px; border-radius: 5px; margin-top: 10px; cursor: pointer; font-weight: bold; }
-        .btn-del { background: #ff4d4d; color: white; border: none; padding: 8px 12px; border-radius: 6px; cursor: pointer; position: absolute; right: 15px; top: 15px; font-weight: bold; }
+        body { background: #050505; color: #0078d4; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
+        .master-panel { width: 100%; max-width: 400px; background: rgba(255,255,255,0.03); border: 1px solid #0078d4; border-radius: 20px; padding: 30px; backdrop-filter: blur(10px); box-shadow: 0 0 30px rgba(0,120,212,0.2); }
+        h2 { text-align: center; letter-spacing: 3px; font-weight: 300; color: #fff; }
+        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 10px; margin: 15px 0; box-sizing: border-box; outline: none; }
+        input:focus { border-color: #0078d4; }
+        .btn-ativar { width: 100%; background: #0078d4; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 10px; cursor: pointer; text-transform: uppercase; transition: 0.3s; }
+        .btn-ativar:hover { background: #005a9e; box-shadow: 0 0 15px #0078d4; }
+        .card-adv { background: rgba(255,255,255,0.05); padding: 15px; border-radius: 12px; margin-top: 15px; border: 1px solid #222; }
+        .btn-copy { background: #fff; color: #000; border: none; width: 100%; padding: 10px; border-radius: 6px; margin-top: 10px; cursor: pointer; font-weight: bold; font-size: 11px; }
+        .btn-del { color: #ff4d4d; background: none; border: none; cursor: pointer; float: right; font-size: 11px; }
     </style>
 </head>
 <body>
-<div class="panel">
-    <h2>MESTRA V8 ADMIN</h2>
+
+<div class="master-panel">
+    <h2>SÍRIUS <span style="color:#0078d4">V25</span></h2>
+    <p style="text-align:center; font-size:10px; opacity:0.5;">GERADOR DE ACESSOS ELITE</p>
+    
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA">
-    <button class="btn-ativar" onclick="ativar()">ATIVAR ACESSO V8</button>
+    <button class="btn-ativar" onclick="ativar()">ATIVAR LICENÇA V25</button>
+
     <div id="lista"></div>
 </div>
 
@@ -28,15 +35,15 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // AQUI ESTÁ O SEGREDO: APONTANDO PARA O ARQUIVO BONITO
-    const urlSistema = "https://cassiakelly995-lab.github.io/meu-app/cassia-app.html";
+    // LINK PARA O NOVO ARQUIVO V25.HTML
+    const urlSistema = "https://cassiakelly995-lab.github.io/meu-app/v25.html";
 
     function ativar() {
         const nome = document.getElementById('nomeAdv').value.trim();
-        if(!nome) return alert("Digite o nome!");
+        if(!nome) return alert("Insira o nome!");
         const id = nome.replace(/\s+/g, '_');
         db.ref('clientes/' + id).set({ nome: nome }).then(() => {
-            alert("✅ ACESSO ATIVADO!");
+            alert("✅ LICENÇA V25 ATIVADA!");
             document.getElementById('nomeAdv').value = "";
         });
     }
@@ -48,10 +55,10 @@
             const id = child.key;
             const linkFinal = urlSistema + "?id=" + id;
             lista.innerHTML += `
-                <div class="user-card">
+                <div class="card-adv">
                     <button class="btn-del" onclick="bloquear('${id}')">BLOQUEAR</button>
-                    <strong>Dra. ${id}</strong>
-                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK DO CONSOLE</button>
+                    <span style="color:#fff; font-size:12px;">Dra. ${id}</span>
+                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK SIRIUS V25</button>
                 </div>`;
         });
     });
@@ -61,8 +68,8 @@
     }
 
     function bloquear(id) {
-        if(confirm("Bloquear " + id + "?")) {
-            db.ref('clientes/' + id).set(null).then(() => alert("🚫 BLOQUEADO!"));
+        if(confirm("Deseja revogar o acesso de " + id + "?")) {
+            db.ref('clientes/' + id).set(null);
         }
     }
 </script>
