--- a/adminv25.html
+++ b/adminv25.html
@@ -2,31 +2,25 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>MESTRA V25 | CONTROLE SUPREMO</title>
+    <title>SÍRIUS V25 | CONTROL PANEL</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
-        body { background: #050505; color: #0078d4; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .master-panel { width: 100%; max-width: 400px; background: rgba(255,255,255,0.03); border: 1px solid #0078d4; border-radius: 20px; padding: 30px; backdrop-filter: blur(10px); box-shadow: 0 0 30px rgba(0,120,212,0.2); }
-        h2 { text-align: center; letter-spacing: 3px; font-weight: 300; color: #fff; }
-        input { width: 100%; background: #000; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 10px; margin: 15px 0; box-sizing: border-box; outline: none; }
-        input:focus { border-color: #0078d4; }
-        .btn-ativar { width: 100%; background: #0078d4; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 10px; cursor: pointer; text-transform: uppercase; transition: 0.3s; }
-        .btn-ativar:hover { background: #005a9e; box-shadow: 0 0 15px #0078d4; }
-        .card-adv { background: rgba(255,255,255,0.05); padding: 15px; border-radius: 12px; margin-top: 15px; border: 1px solid #222; }
-        .btn-copy { background: #fff; color: #000; border: none; width: 100%; padding: 10px; border-radius: 6px; margin-top: 10px; cursor: pointer; font-weight: bold; font-size: 11px; }
+        body { background: #000; color: #0078d4; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
+        .panel { width: 100%; max-width: 400px; background: rgba(255,255,255,0.02); border: 1px solid #0078d4; border-radius: 20px; padding: 30px; backdrop-filter: blur(10px); box-shadow: 0 0 30px rgba(0,120,212,0.2); }
+        h2 { text-align: center; letter-spacing: 3px; color: #fff; font-weight: 300; }
+        input { width: 100%; background: #0a0a0a; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 10px; margin: 15px 0; box-sizing: border-box; }
+        .btn-ativar { width: 100%; background: #0078d4; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
+        .card-user { background: rgba(255,255,255,0.05); padding: 15px; border-radius: 12px; margin-top: 15px; border: 1px solid #222; }
+        .btn-copy { background: #fff; color: #000; border: none; width: 100%; padding: 10px; border-radius: 6px; margin-top: 10px; cursor: pointer; font-weight: bold; }
         .btn-del { color: #ff4d4d; background: none; border: none; cursor: pointer; float: right; font-size: 11px; }
     </style>
 </head>
 <body>
-
-<div class="master-panel">
+<div class="panel">
     <h2>SÍRIUS <span style="color:#0078d4">V25</span></h2>
-    <p style="text-align:center; font-size:10px; opacity:0.5;">GERADOR DE ACESSOS ELITE</p>
-    
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA">
-    <button class="btn-ativar" onclick="ativar()">ATIVAR LICENÇA V25</button>
-
+    <button class="btn-ativar" onclick="ativar()">GERAR ACESSO ELITE</button>
     <div id="lista"></div>
 </div>
 
@@ -35,15 +29,15 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // LINK PARA O NOVO ARQUIVO V25.HTML
+    // ESTE LINK APONTA PARA O SEU CONSOLE V25
     const urlSistema = "https://cassiakelly995-lab.github.io/meu-app/v25.html";
 
     function ativar() {
         const nome = document.getElementById('nomeAdv').value.trim();
-        if(!nome) return alert("Insira o nome!");
+        if(!nome) return alert("Digite o nome!");
         const id = nome.replace(/\s+/g, '_');
         db.ref('clientes/' + id).set({ nome: nome }).then(() => {
-            alert("✅ LICENÇA V25 ATIVADA!");
+            alert("✅ LICENÇA ATIVADA!");
             document.getElementById('nomeAdv').value = "";
         });
     }
@@ -55,10 +49,10 @@
             const id = child.key;
             const linkFinal = urlSistema + "?id=" + id;
             lista.innerHTML += `
-                <div class="card-adv">
+                <div class="card-user">
                     <button class="btn-del" onclick="bloquear('${id}')">BLOQUEAR</button>
-                    <span style="color:#fff; font-size:12px;">Dra. ${id}</span>
-                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK SIRIUS V25</button>
+                    <span style="color:#fff;">Dra. ${id}</span>
+                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK V25</button>
                 </div>`;
         });
     });
@@ -68,9 +62,7 @@
     }
 
     function bloquear(id) {
-        if(confirm("Deseja revogar o acesso de " + id + "?")) {
-            db.ref('clientes/' + id).set(null);
-        }
+        if(confirm("Bloquear " + id + "?")) db.ref('clientes/' + id).set(null);
     }
 </script>
 </body>
