--- a/adminv25.html
+++ b/adminv25.html
@@ -2,15 +2,15 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>SÍRIUS V25 | CONTROL PANEL</title>
+    <title>ADM | CÁSSIA PROMPT V8</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
     <style>
         body { background: #000; color: #0078d4; font-family: 'Segoe UI', sans-serif; display: flex; justify-content: center; padding: 20px; }
-        .panel { width: 100%; max-width: 400px; background: rgba(255,255,255,0.02); border: 1px solid #0078d4; border-radius: 20px; padding: 30px; backdrop-filter: blur(10px); box-shadow: 0 0 30px rgba(0,120,212,0.2); }
+        .panel { width: 100%; max-width: 400px; background: rgba(255,255,255,0.02); border: 1px solid #c30052; border-radius: 20px; padding: 30px; backdrop-filter: blur(10px); box-shadow: 0 0 30px rgba(195,0,82,0.2); }
         h2 { text-align: center; letter-spacing: 3px; color: #fff; font-weight: 300; }
         input { width: 100%; background: #0a0a0a; border: 1px solid #333; color: #fff; padding: 15px; border-radius: 10px; margin: 15px 0; box-sizing: border-box; }
-        .btn-ativar { width: 100%; background: #0078d4; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
+        .btn-ativar { width: 100%; background: #c30052; color: #fff; border: none; padding: 15px; font-weight: bold; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
         .card-user { background: rgba(255,255,255,0.05); padding: 15px; border-radius: 12px; margin-top: 15px; border: 1px solid #222; }
         .btn-copy { background: #fff; color: #000; border: none; width: 100%; padding: 10px; border-radius: 6px; margin-top: 10px; cursor: pointer; font-weight: bold; }
         .btn-del { color: #ff4d4d; background: none; border: none; cursor: pointer; float: right; font-size: 11px; }
@@ -18,18 +18,15 @@
 </head>
 <body>
 <div class="panel">
-    <h2>SÍRIUS <span style="color:#0078d4">V25</span></h2>
+    <h2>PROMPT <span style="color:#c30052">V8</span></h2>
     <input type="text" id="nomeAdv" placeholder="NOME DA DOUTORA">
-    <button class="btn-ativar" onclick="ativar()">GERAR ACESSO ELITE</button>
+    <button class="btn-ativar" onclick="ativar()">ATIVAR ACESSO V8</button>
     <div id="lista"></div>
 </div>
-
 <script>
     const firebaseConfig = { databaseURL: "https://cassiapromptv8-default-rtdb.firebaseio.com/" };
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
-
-    // ESTE LINK APONTA PARA O SEU CONSOLE V25
     const urlSistema = "https://cassiakelly995-lab.github.io/meu-app/v25.html";
 
     function ativar() {
@@ -37,33 +34,21 @@
         if(!nome) return alert("Digite o nome!");
         const id = nome.replace(/\s+/g, '_');
         db.ref('clientes/' + id).set({ nome: nome }).then(() => {
-            alert("✅ LICENÇA ATIVADA!");
+            alert("✅ LICENÇA V8 ATIVADA!");
             document.getElementById('nomeAdv').value = "";
         });
     }
-
     db.ref('clientes').on('value', (snap) => {
         const lista = document.getElementById('lista');
         lista.innerHTML = "";
         snap.forEach((child) => {
             const id = child.key;
             const linkFinal = urlSistema + "?id=" + id;
-            lista.innerHTML += `
-                <div class="card-user">
-                    <button class="btn-del" onclick="bloquear('${id}')">BLOQUEAR</button>
-                    <span style="color:#fff;">Dra. ${id}</span>
-                    <button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK V25</button>
-                </div>`;
+            lista.innerHTML += `<div class="card-user"><button class="btn-del" onclick="bloquear('${id}')">BLOQUEAR</button><span style="color:#fff;">Dra. ${id}</span><button class="btn-copy" onclick="copiar('${linkFinal}')">COPIAR LINK V8</button></div>`;
         });
     });
-
-    function copiar(url) {
-        navigator.clipboard.writeText(url).then(() => alert("🔗 LINK COPIADO!"));
-    }
-
-    function bloquear(id) {
-        if(confirm("Bloquear " + id + "?")) db.ref('clientes/' + id).set(null);
-    }
+    function copiar(url) { navigator.clipboard.writeText(url).then(() => alert("🔗 LINK COPIADO!")); }
+    function bloquear(id) { if(confirm("Bloquear " + id + "?")) db.ref('clientes/' + id).set(null); }
 </script>
 </body>
 </html>
